2005-04-12 James Turner <james@worldforge.org>

	* Mercator/Shader.h: change checkIntersects to work on Segments
	  (as the comments suggest it originally did).
	  
	* Mercator/Terrain.cpp, Mercator/Terrain.h: when adding a shader,
	  clients must now specify a unique integer ID, which is used
	  to identify the shader in a Segment's surfacestore. As a result,
	  the Shaderstore is now a std::map<>. When adding shaders to
	  a Segment, checkIntersects is now used to only add shaders which
	  affect the segment.
	  
	* Mercator/Segment.cpp, Mercator/Segment.h: change Surfacestore to
	  be sparse, implement as a map, where the index value is the ID of
	  the shader which generated the surface.
	  
	* Mercator/AreaShader.cpp, Mercator/AreaShader.h, 
	  Mercator/DepthShader.h, Mercator/DepthShader.cpp,
	  Mercator/FillShader.cpp, Mercator/FillShader.h,
	  Mercator/GrassShader.cpp, Mercator/GrassShader.h,
	  Mercator/ThresholdShader.cpp, Mercator/ThresholdShader.h:
	  update the revised shader API. In all cases the only change is
	  removed a level of indirection, since every implementation of
	  checkIntersect simply called 's.m_segment' to do useful work.
	  
	* tests/testArea.cpp, tests/testTerrain.cpp: update tests for new
	  shader API.

2005-04-11 James Turner <james@worldforge.org>

	* tests/timeSeg.cpp: fix up for changes to Forest API.

2005-04-10  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Area.h: Fix bbox() accessor to return by reference, and
	  add an accessor for the area polygon.

	* configure.ac: Bump version to 0.2.2, so apps can test for new
	  Forest and Area API.

2005-04-10 James Turner <james@worldforge.org>

	* Mercator/Forrest.cpp, Mercator/Forrest.h: make Forrest objects own
	  an area, replacing their own Box + Polygon storage, which was
	  only partially supported.
	  
	* tests/testForrest.cpp: update for changed Forrest API
	
	* Mercator/Terrain.cpp, Mercator/Terrain.h: make Terrain track a list